parser.output
Terminals unused in grammar

    REPOP


Grammar

    0 $accept: function $end

    1 function: function_header optional_variable body

    2 function_header: FUNCTION IDENTIFIER optional_parameter RETURNS type ';'
    3                | error

    4 optional_variable: variable optional_variable
    5                  | %empty

    6 variable: IDENTIFIER ':' type IS statement_
    7         | error

    8 optional_parameter: optional_parameter RETURNS type ';'
    9                   | parameter

   10 parameter: IDENTIFIER ':' type
   11          | %empty

   12 type: INTEGER
   13     | REAL
   14     | BOOLEAN

   15 body: BEGIN_ statement_ END ';'

   16 statement_: statement ';'
   17           | error ';'

   18 statement: expression
   19          | REDUCE operator reductions ENDREDUCE
   20          | IF expression THEN statement_ ELSE statement_ ENDIF
   21          | CASE expression IS optional_cases OTHERS ARROW statement_ ENDCASE

   22 operator: ADDOP
   23         | MULOP REMOP
   24         | EXPOP

   25 optional_cases: case optional_cases
   26               | %empty

   27 case: WHEN INT_LITERAL ARROW statement_
   28     | error

   29 reductions: reductions statement_
   30           | %empty

   31 expression: expression ANDOP relation
   32           | expression_

   33 expression_: expression_ OROP relation
   34            | relation

   35 relation: relation RELOP term
   36         | term

   37 term: term ADDOP factor
   38     | factor

   39 factor: factor MULOP primary
   40       | factor REMOP
   41       | exponent

   42 exponent: factor EXPOP notion
   43         | notion

   44 notion: notion NOTOP primary
   45       | primary

   46 primary: '(' expression ')'
   47        | INT_LITERAL
   48        | REAL_LITERAL
   49        | BOOL_LITERAL
   50        | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 46
    ')' (41) 46
    ':' (58) 6 10
    ';' (59) 2 8 15 16 17
    error (256) 3 7 17 28
    IDENTIFIER (258) 2 6 10 50
    INT_LITERAL (259) 27 47
    REAL_LITERAL (260) 48
    BOOL_LITERAL (261) 49
    OROP (262) 33
    ANDOP (263) 31
    RELOP (264) 35
    REMOP (265) 23 40
    NOTOP (266) 44
    REPOP (267)
    ADDOP (268) 22 37
    MULOP (269) 23 39
    EXPOP (270) 24 42
    BEGIN_ (271) 15
    BOOLEAN (272) 14
    END (273) 15
    ENDREDUCE (274) 19
    FUNCTION (275) 2
    INTEGER (276) 12
    IS (277) 6 21
    REDUCE (278) 19
    RETURNS (279) 2 8
    IF (280) 20
    THEN (281) 20
    WHEN (282) 27
    ELSE (283) 20
    ENDIF (284) 20
    CASE (285) 21
    OTHERS (286) 21
    ARROW (287) 21 27
    ENDCASE (288) 21
    REAL (289) 13


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    function (40)
        on left: 1
        on right: 0
    function_header (41)
        on left: 2 3
        on right: 1
    optional_variable (42)
        on left: 4 5
        on right: 1 4
    variable (43)
        on left: 6 7
        on right: 4
    optional_parameter (44)
        on left: 8 9
        on right: 2 8
    parameter (45)
        on left: 10 11
        on right: 9
    type (46)
        on left: 12 13 14
        on right: 2 6 8 10
    body (47)
        on left: 15
        on right: 1
    statement_ (48)
        on left: 16 17
        on right: 6 15 20 21 27 29
    statement (49)
        on left: 18 19 20 21
        on right: 16
    operator (50)
        on left: 22 23 24
        on right: 19
    optional_cases (51)
        on left: 25 26
        on right: 21 25
    case (52)
        on left: 27 28
        on right: 25
    reductions (53)
        on left: 29 30
        on right: 19 29
    expression (54)
        on left: 31 32
        on right: 18 20 21 31 46
    expression_ (55)
        on left: 33 34
        on right: 32 33
    relation (56)
        on left: 35 36
        on right: 31 33 34 35
    term (57)
        on left: 37 38
        on right: 35 36 37
    factor (58)
        on left: 39 40 41
        on right: 37 38 39 40 42
    exponent (59)
        on left: 42 43
        on right: 41
    notion (60)
        on left: 44 45
        on right: 42 43 44
    primary (61)
        on left: 46 47 48 49 50
        on right: 39 44 45


State 0

    0 $accept: . function $end

    error     shift, and go to state 1
    FUNCTION  shift, and go to state 2

    function         go to state 3
    function_header  go to state 4


State 1

    3 function_header: error .

    $default  reduce using rule 3 (function_header)


State 2

    2 function_header: FUNCTION . IDENTIFIER optional_parameter RETURNS type ';'

    IDENTIFIER  shift, and go to state 5


State 3

    0 $accept: function . $end

    $end  shift, and go to state 6


State 4

    1 function: function_header . optional_variable body

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8

    BEGIN_  reduce using rule 5 (optional_variable)

    optional_variable  go to state 9
    variable           go to state 10


State 5

    2 function_header: FUNCTION IDENTIFIER . optional_parameter RETURNS type ';'

    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 11 (parameter)

    optional_parameter  go to state 12
    parameter           go to state 13


State 6

    0 $accept: function $end .

    $default  accept


State 7

    7 variable: error .

    $default  reduce using rule 7 (variable)


State 8

    6 variable: IDENTIFIER . ':' type IS statement_

    ':'  shift, and go to state 14


State 9

    1 function: function_header optional_variable . body

    BEGIN_  shift, and go to state 15

    body  go to state 16


State 10

    4 optional_variable: variable . optional_variable

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8

    BEGIN_  reduce using rule 5 (optional_variable)

    optional_variable  go to state 17
    variable           go to state 10


State 11

   10 parameter: IDENTIFIER . ':' type

    ':'  shift, and go to state 18


State 12

    2 function_header: FUNCTION IDENTIFIER optional_parameter . RETURNS type ';'
    8 optional_parameter: optional_parameter . RETURNS type ';'

    RETURNS  shift, and go to state 19


State 13

    9 optional_parameter: parameter .

    $default  reduce using rule 9 (optional_parameter)


State 14

    6 variable: IDENTIFIER ':' . type IS statement_

    BOOLEAN  shift, and go to state 20
    INTEGER  shift, and go to state 21
    REAL     shift, and go to state 22

    type  go to state 23


State 15

   15 body: BEGIN_ . statement_ END ';'

    error         shift, and go to state 24
    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    REDUCE        shift, and go to state 29
    IF            shift, and go to state 30
    CASE          shift, and go to state 31
    '('           shift, and go to state 32

    statement_   go to state 33
    statement    go to state 34
    expression   go to state 35
    expression_  go to state 36
    relation     go to state 37
    term         go to state 38
    factor       go to state 39
    exponent     go to state 40
    notion       go to state 41
    primary      go to state 42


State 16

    1 function: function_header optional_variable body .

    $default  reduce using rule 1 (function)


State 17

    4 optional_variable: variable optional_variable .

    $default  reduce using rule 4 (optional_variable)


State 18

   10 parameter: IDENTIFIER ':' . type

    BOOLEAN  shift, and go to state 20
    INTEGER  shift, and go to state 21
    REAL     shift, and go to state 22

    type  go to state 43


State 19

    2 function_header: FUNCTION IDENTIFIER optional_parameter RETURNS . type ';'
    8 optional_parameter: optional_parameter RETURNS . type ';'

    BOOLEAN  shift, and go to state 20
    INTEGER  shift, and go to state 21
    REAL     shift, and go to state 22

    type  go to state 44


State 20

   14 type: BOOLEAN .

    $default  reduce using rule 14 (type)


State 21

   12 type: INTEGER .

    $default  reduce using rule 12 (type)


State 22

   13 type: REAL .

    $default  reduce using rule 13 (type)


State 23

    6 variable: IDENTIFIER ':' type . IS statement_

    IS  shift, and go to state 45


State 24

   17 statement_: error . ';'

    ';'  shift, and go to state 46


State 25

   50 primary: IDENTIFIER .

    $default  reduce using rule 50 (primary)


State 26

   47 primary: INT_LITERAL .

    $default  reduce using rule 47 (primary)


State 27

   48 primary: REAL_LITERAL .

    $default  reduce using rule 48 (primary)


State 28

   49 primary: BOOL_LITERAL .

    $default  reduce using rule 49 (primary)


State 29

   19 statement: REDUCE . operator reductions ENDREDUCE

    ADDOP  shift, and go to state 47
    MULOP  shift, and go to state 48
    EXPOP  shift, and go to state 49

    operator  go to state 50


State 30

   20 statement: IF . expression THEN statement_ ELSE statement_ ENDIF

    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    '('           shift, and go to state 32

    expression   go to state 51
    expression_  go to state 36
    relation     go to state 37
    term         go to state 38
    factor       go to state 39
    exponent     go to state 40
    notion       go to state 41
    primary      go to state 42


State 31

   21 statement: CASE . expression IS optional_cases OTHERS ARROW statement_ ENDCASE

    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    '('           shift, and go to state 32

    expression   go to state 52
    expression_  go to state 36
    relation     go to state 37
    term         go to state 38
    factor       go to state 39
    exponent     go to state 40
    notion       go to state 41
    primary      go to state 42


State 32

   46 primary: '(' . expression ')'

    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    '('           shift, and go to state 32

    expression   go to state 53
    expression_  go to state 36
    relation     go to state 37
    term         go to state 38
    factor       go to state 39
    exponent     go to state 40
    notion       go to state 41
    primary      go to state 42


State 33

   15 body: BEGIN_ statement_ . END ';'

    END  shift, and go to state 54


State 34

   16 statement_: statement . ';'

    ';'  shift, and go to state 55


State 35

   18 statement: expression .
   31 expression: expression . ANDOP relation

    ANDOP  shift, and go to state 56

    $default  reduce using rule 18 (statement)


State 36

   32 expression: expression_ .
   33 expression_: expression_ . OROP relation

    OROP  shift, and go to state 57

    $default  reduce using rule 32 (expression)


State 37

   34 expression_: relation .
   35 relation: relation . RELOP term

    RELOP  shift, and go to state 58

    $default  reduce using rule 34 (expression_)


State 38

   36 relation: term .
   37 term: term . ADDOP factor

    ADDOP  shift, and go to state 59

    $default  reduce using rule 36 (relation)


State 39

   38 term: factor .
   39 factor: factor . MULOP primary
   40       | factor . REMOP
   42 exponent: factor . EXPOP notion

    REMOP  shift, and go to state 60
    MULOP  shift, and go to state 61
    EXPOP  shift, and go to state 62

    $default  reduce using rule 38 (term)


State 40

   41 factor: exponent .

    $default  reduce using rule 41 (factor)


State 41

   43 exponent: notion .
   44 notion: notion . NOTOP primary

    NOTOP  shift, and go to state 63

    $default  reduce using rule 43 (exponent)


State 42

   45 notion: primary .

    $default  reduce using rule 45 (notion)


State 43

   10 parameter: IDENTIFIER ':' type .

    $default  reduce using rule 10 (parameter)


State 44

    2 function_header: FUNCTION IDENTIFIER optional_parameter RETURNS type . ';'
    8 optional_parameter: optional_parameter RETURNS type . ';'

    ';'  shift, and go to state 64


State 45

    6 variable: IDENTIFIER ':' type IS . statement_

    error         shift, and go to state 24
    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    REDUCE        shift, and go to state 29
    IF            shift, and go to state 30
    CASE          shift, and go to state 31
    '('           shift, and go to state 32

    statement_   go to state 65
    statement    go to state 34
    expression   go to state 35
    expression_  go to state 36
    relation     go to state 37
    term         go to state 38
    factor       go to state 39
    exponent     go to state 40
    notion       go to state 41
    primary      go to state 42


State 46

   17 statement_: error ';' .

    $default  reduce using rule 17 (statement_)


State 47

   22 operator: ADDOP .

    $default  reduce using rule 22 (operator)


State 48

   23 operator: MULOP . REMOP

    REMOP  shift, and go to state 66


State 49

   24 operator: EXPOP .

    $default  reduce using rule 24 (operator)


State 50

   19 statement: REDUCE operator . reductions ENDREDUCE

    $default  reduce using rule 30 (reductions)

    reductions  go to state 67


State 51

   20 statement: IF expression . THEN statement_ ELSE statement_ ENDIF
   31 expression: expression . ANDOP relation

    ANDOP  shift, and go to state 56
    THEN   shift, and go to state 68


State 52

   21 statement: CASE expression . IS optional_cases OTHERS ARROW statement_ ENDCASE
   31 expression: expression . ANDOP relation

    ANDOP  shift, and go to state 56
    IS     shift, and go to state 69


State 53

   31 expression: expression . ANDOP relation
   46 primary: '(' expression . ')'

    ANDOP  shift, and go to state 56
    ')'    shift, and go to state 70


State 54

   15 body: BEGIN_ statement_ END . ';'

    ';'  shift, and go to state 71


State 55

   16 statement_: statement ';' .

    $default  reduce using rule 16 (statement_)


State 56

   31 expression: expression ANDOP . relation

    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    '('           shift, and go to state 32

    relation  go to state 72
    term      go to state 38
    factor    go to state 39
    exponent  go to state 40
    notion    go to state 41
    primary   go to state 42


State 57

   33 expression_: expression_ OROP . relation

    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    '('           shift, and go to state 32

    relation  go to state 73
    term      go to state 38
    factor    go to state 39
    exponent  go to state 40
    notion    go to state 41
    primary   go to state 42


State 58

   35 relation: relation RELOP . term

    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    '('           shift, and go to state 32

    term      go to state 74
    factor    go to state 39
    exponent  go to state 40
    notion    go to state 41
    primary   go to state 42


State 59

   37 term: term ADDOP . factor

    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    '('           shift, and go to state 32

    factor    go to state 75
    exponent  go to state 40
    notion    go to state 41
    primary   go to state 42


State 60

   40 factor: factor REMOP .

    $default  reduce using rule 40 (factor)


State 61

   39 factor: factor MULOP . primary

    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    '('           shift, and go to state 32

    primary  go to state 76


State 62

   42 exponent: factor EXPOP . notion

    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    '('           shift, and go to state 32

    notion   go to state 77
    primary  go to state 42


State 63

   44 notion: notion NOTOP . primary

    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    '('           shift, and go to state 32

    primary  go to state 78


State 64

    2 function_header: FUNCTION IDENTIFIER optional_parameter RETURNS type ';' .
    8 optional_parameter: optional_parameter RETURNS type ';' .

    RETURNS   reduce using rule 8 (optional_parameter)
    $default  reduce using rule 2 (function_header)


State 65

    6 variable: IDENTIFIER ':' type IS statement_ .

    $default  reduce using rule 6 (variable)


State 66

   23 operator: MULOP REMOP .

    $default  reduce using rule 23 (operator)


State 67

   19 statement: REDUCE operator reductions . ENDREDUCE
   29 reductions: reductions . statement_

    error         shift, and go to state 24
    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    ENDREDUCE     shift, and go to state 79
    REDUCE        shift, and go to state 29
    IF            shift, and go to state 30
    CASE          shift, and go to state 31
    '('           shift, and go to state 32

    statement_   go to state 80
    statement    go to state 34
    expression   go to state 35
    expression_  go to state 36
    relation     go to state 37
    term         go to state 38
    factor       go to state 39
    exponent     go to state 40
    notion       go to state 41
    primary      go to state 42


State 68

   20 statement: IF expression THEN . statement_ ELSE statement_ ENDIF

    error         shift, and go to state 24
    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    REDUCE        shift, and go to state 29
    IF            shift, and go to state 30
    CASE          shift, and go to state 31
    '('           shift, and go to state 32

    statement_   go to state 81
    statement    go to state 34
    expression   go to state 35
    expression_  go to state 36
    relation     go to state 37
    term         go to state 38
    factor       go to state 39
    exponent     go to state 40
    notion       go to state 41
    primary      go to state 42


State 69

   21 statement: CASE expression IS . optional_cases OTHERS ARROW statement_ ENDCASE

    error  shift, and go to state 82
    WHEN   shift, and go to state 83

    OTHERS  reduce using rule 26 (optional_cases)

    optional_cases  go to state 84
    case            go to state 85


State 70

   46 primary: '(' expression ')' .

    $default  reduce using rule 46 (primary)


State 71

   15 body: BEGIN_ statement_ END ';' .

    $default  reduce using rule 15 (body)


State 72

   31 expression: expression ANDOP relation .
   35 relation: relation . RELOP term

    RELOP  shift, and go to state 58

    $default  reduce using rule 31 (expression)


State 73

   33 expression_: expression_ OROP relation .
   35 relation: relation . RELOP term

    RELOP  shift, and go to state 58

    $default  reduce using rule 33 (expression_)


State 74

   35 relation: relation RELOP term .
   37 term: term . ADDOP factor

    ADDOP  shift, and go to state 59

    $default  reduce using rule 35 (relation)


State 75

   37 term: term ADDOP factor .
   39 factor: factor . MULOP primary
   40       | factor . REMOP
   42 exponent: factor . EXPOP notion

    REMOP  shift, and go to state 60
    MULOP  shift, and go to state 61
    EXPOP  shift, and go to state 62

    $default  reduce using rule 37 (term)


State 76

   39 factor: factor MULOP primary .

    $default  reduce using rule 39 (factor)


State 77

   42 exponent: factor EXPOP notion .
   44 notion: notion . NOTOP primary

    NOTOP  shift, and go to state 63

    $default  reduce using rule 42 (exponent)


State 78

   44 notion: notion NOTOP primary .

    $default  reduce using rule 44 (notion)


State 79

   19 statement: REDUCE operator reductions ENDREDUCE .

    $default  reduce using rule 19 (statement)


State 80

   29 reductions: reductions statement_ .

    $default  reduce using rule 29 (reductions)


State 81

   20 statement: IF expression THEN statement_ . ELSE statement_ ENDIF

    ELSE  shift, and go to state 86


State 82

   28 case: error .

    $default  reduce using rule 28 (case)


State 83

   27 case: WHEN . INT_LITERAL ARROW statement_

    INT_LITERAL  shift, and go to state 87


State 84

   21 statement: CASE expression IS optional_cases . OTHERS ARROW statement_ ENDCASE

    OTHERS  shift, and go to state 88


State 85

   25 optional_cases: case . optional_cases

    error  shift, and go to state 82
    WHEN   shift, and go to state 83

    OTHERS  reduce using rule 26 (optional_cases)

    optional_cases  go to state 89
    case            go to state 85


State 86

   20 statement: IF expression THEN statement_ ELSE . statement_ ENDIF

    error         shift, and go to state 24
    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    REDUCE        shift, and go to state 29
    IF            shift, and go to state 30
    CASE          shift, and go to state 31
    '('           shift, and go to state 32

    statement_   go to state 90
    statement    go to state 34
    expression   go to state 35
    expression_  go to state 36
    relation     go to state 37
    term         go to state 38
    factor       go to state 39
    exponent     go to state 40
    notion       go to state 41
    primary      go to state 42


State 87

   27 case: WHEN INT_LITERAL . ARROW statement_

    ARROW  shift, and go to state 91


State 88

   21 statement: CASE expression IS optional_cases OTHERS . ARROW statement_ ENDCASE

    ARROW  shift, and go to state 92


State 89

   25 optional_cases: case optional_cases .

    $default  reduce using rule 25 (optional_cases)


State 90

   20 statement: IF expression THEN statement_ ELSE statement_ . ENDIF

    ENDIF  shift, and go to state 93


State 91

   27 case: WHEN INT_LITERAL ARROW . statement_

    error         shift, and go to state 24
    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    REDUCE        shift, and go to state 29
    IF            shift, and go to state 30
    CASE          shift, and go to state 31
    '('           shift, and go to state 32

    statement_   go to state 94
    statement    go to state 34
    expression   go to state 35
    expression_  go to state 36
    relation     go to state 37
    term         go to state 38
    factor       go to state 39
    exponent     go to state 40
    notion       go to state 41
    primary      go to state 42


State 92

   21 statement: CASE expression IS optional_cases OTHERS ARROW . statement_ ENDCASE

    error         shift, and go to state 24
    IDENTIFIER    shift, and go to state 25
    INT_LITERAL   shift, and go to state 26
    REAL_LITERAL  shift, and go to state 27
    BOOL_LITERAL  shift, and go to state 28
    REDUCE        shift, and go to state 29
    IF            shift, and go to state 30
    CASE          shift, and go to state 31
    '('           shift, and go to state 32

    statement_   go to state 95
    statement    go to state 34
    expression   go to state 35
    expression_  go to state 36
    relation     go to state 37
    term         go to state 38
    factor       go to state 39
    exponent     go to state 40
    notion       go to state 41
    primary      go to state 42


State 93

   20 statement: IF expression THEN statement_ ELSE statement_ ENDIF .

    $default  reduce using rule 20 (statement)


State 94

   27 case: WHEN INT_LITERAL ARROW statement_ .

    $default  reduce using rule 27 (case)


State 95

   21 statement: CASE expression IS optional_cases OTHERS ARROW statement_ . ENDCASE

    ENDCASE  shift, and go to state 96


State 96

   21 statement: CASE expression IS optional_cases OTHERS ARROW statement_ ENDCASE .

    $default  reduce using rule 21 (statement)
